# LogFoundry

./: .env.example  .gitignore  README.md  context.md  docker-compose.yml  p  pyproject.toml
api/: Dockerfile  main.py  models.py  requirements.txt
api/middleware/: __init__.py  rate_limiter.py
api/producers/: __init__.py  kafka_producer.py
api/routers/: __init__.py  ingest.py  query.py
consumers/: Dockerfile  alert_consumer.py  alerts.yml  base_consumer.py  log_writer.py  metrics_consumer.py  requirements.txt
db/: schema.sql
scripts/: benchmark_batch.sh  benchmark_throughput.py  demo.sh  load_test.sh  manage_partitions.py  replay_dlq.py
sdk/: README.md  __init__.py  cli.py  logger.py
tests/: conftest.py  test_consumers.py  test_health.py  test_ingest_api.py  test_query_api.py  test_scripts.py  test_sdk.py
