[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "logfoundry-sdk"
version = "1.0.0"
description = "Python SDK for LogFoundry — distributed log ingestion platform"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}

dependencies = [
    "click>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "testcontainers[kafka,postgres,redis]>=4.4.1",
]

[project.scripts]
logfoundry = "sdk.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["sdk*"]
